# ai-market-maker

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile.api  Dockerfile.worker  LICENSE  PRODUCTION.md  README.md  SECURITY.md  alembic.ini  docker-compose.leaderboard.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  start.sh
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_init_platform_tables.py
cli_backtest/: __init__.py  driver.py
config/: agent_prompts.active.json  agent_prompts.buffett.json  agent_prompts.daytrade.json  agent_prompts.json  agent_prompts.scalp.json  agent_prompts.swing.json  app.default.json  policy.buffett.json  policy.daytrade.json  policy.default.json  policy.example.json  policy.scalp.json  policy.signoff.json  policy.swing.json  runtime_settings.json
docs/: HARNESS_MEMORY.md  configuration.md  langgraph-workflow.md  leaderboard-hosting.md  policy-schema.md  run-modes.md  weight-assigner.md  weighted-arbitrator.md
docs/api-leadboard/: leaderboard-api.yaml
docs/personas/: 01_market_scanner.md  01_policy_orchestrator.md  02_market_scan.md  02_technical_analysis.md  03_monetary_sentinel.md  03_sentiment_analysis.md  04_news_narrative_miner.md  04_stat_arb.md  05_quant_signals.md  05_technical_analysis_desk.md  06_open_interest_positioning.md  06_valuation.md  07_liquidity.md  07_retail_hype_tracker.md  08_pro_bias_analyst.md  08_risk_guard.md  09_market_microstructure.md  09_portfolio_manager.md  10_risk_desk.md  11_desk_debate.md  12_signal_arbitrator.md  13_portfolio_proposal.md  14_risk_guard.md  15_portfolio_execute.md  README.md
openclaw/: SKILL.md  manifest.json
openclaw/examples/: claw_usage.md  korean_guide.md
openclaw/scripts/: claw_runner.py  verify_installation.sh
schema/: agent_trace.json  nexus_payload.json
scripts/: analyze_backtest_run.py  analyze_round_trips.py  generate_backtest_report.py  publish_leadpage_result.py  run_platform_worker.py  sync_local_backtests_to_platform.py
scripts/token_screeners/: screener_runner.py  vcp_scanner.py  wyckoff_scanner.py
src/: __init__.py  eval_export.py  flow_log.py  leaderboard_submitter.py  leadpage_local_scan.py  main.py  paper_account.py  run_index.py  runs_retention.py
src/adapters/: __init__.py  exchange_protocol.py  futu.py  hyperliquid_adapter.py  nexus_adapter.py
src/agents/: base_agent.py  liquidity_management.py  liquidity_order_flow.py  market_data.py  market_scan.py  monetary_sentinel.py  news_narrative_miner.py  order_placement.py  pattern_recognition_bot.py  portfolio_management.py  quant.py  (+12 more)
tests/: nexus_agentic_fixtures.py  test_adanos_sentiment.py  test_agent_llm_context.py  test_agent_prompt_routes.py  test_agentic_trading_e2e.py  test_backtest_config.py  test_backtest_data_quality.py  test_backtest_engine_risk_bind.py  test_backtest_export_bundle.py  test_backtest_futu_bars.py  test_backtest_http_endpoints.py  test_backtest_integration.py  test_backtest_metrics.py  test_backtest_parity_integration.py  test_backtest_report_html.py  test_backtest_validation.py  test_cadence.py  test_data_loaders.py  test_default_universe.py  test_eval_export.py  test_exchange_config.py  test_exchange_protocol.py  test_exchange_trade_format.py  test_execution_engine.py  test_execution_intent.py  test_flow_futu_price_route.py  test_flow_stream_server_integration.py  test_futu_adapter.py  test_graph_smoke_modes.py  test_hedge_fund_state.py  test_hyperliquid_adapter.py  test_leaderboard_local_provider.py  test_llm_env.py  test_llm_json_parse.py  test_llm_mode.py  test_mock_depth_is_labeled.py  test_multi_step_backtest.py  test_nexus_adapter.py  test_nexus_env.py  test_nexus_payload_from_events_integration.py  (+21 more)
web/: .dockerignore  .env.example  .prettierignore  Dockerfile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vitest.config.ts
web-v2/: .env.example  Dockerfile  MIGRATION_TODO.md  README.md  index.html  nginx.docker.conf  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
(+384 files in other folders)
