[project]
name = "ai-market-maker"
version = "0.1.0"
description = "Crypto Market-Making AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.85",
    "langgraph>=0.4.7",
    "pandas>=2.2.3",
    "langchain>=0.3.25",
    "langchain-core>=0.3.81",
    "python-dotenv>=1.1.0",
    "tweepy>=4.15.0",
    "openai>=1.82.0",
    "ta-lib>=0.6.3",
    "pycoingecko>=3.2.0",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.12.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
