[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Install with `uv sync` (editable by default). Top-level packages live under `src/`
# (`api`, `backtest`, …) plus modules `main` and `flow_log` — no PYTHONPATH needed.
[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main", "flow_log"]

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "ai-market-maker"
version = "0.1.0"
description = "Crypto Market-Making AI Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.85",
    "fastapi>=0.117.0",
    "jsonschema>=4.25.1",
    "langgraph>=0.4.7",
    "pandas>=2.2.3",
    "langchain>=1.2.12",
    "langchain-core>=1.2.22",
    "python-dotenv>=1.1.0",
    "tweepy>=4.15.0",
    "openai>=1.82.0",
    "TA-Lib>=0.4.28",
    "pycoingecko>=3.2.0",
    "statsmodels>=0.14.4",
    "uvicorn>=0.36.0",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.12.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = ["-q"]
testpaths = ["tests"]
