[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Install with `uv sync` (editable by default). Top-level packages live under `src/`
# (`api`, `backtest`, …) plus top-level modules like `main`, `flow_log`, `eval_export`.
[tool.setuptools]
package-dir = { "" = "src" }
py-modules = ["main", "flow_log", "eval_export"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
api = ["schema/*.json"]

[project]
name = "ai-market-maker"
version = "0.1.0"
description = "Crypto Market-Making AI Agent"
readme = "README.md"
license = { text = "GNU Affero General Public License v3.0 only" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "ccxt>=4.4.85",
    "yfinance>=0.2.0",
    "futu-api>=9.0.0",
    "fastapi>=0.117.0",
    "jsonschema>=4.25.1",
    "langgraph>=0.4.7",
    "pandas>=2.2.3",
    "langchain>=1.2.12",
    "langchain-core>=1.2.22",
    "python-dotenv>=1.1.0",
    "tweepy>=4.15.0",
    "openai>=1.82.0",
    "TA-Lib>=0.4.28",
    "pycoingecko>=3.2.0",
    "statsmodels>=0.14.4",
    "uvicorn>=0.36.0",
    "websockets>=16.0",
]

[project.scripts]
aimm-export-eval = "eval_export:main"

[project.optional-dependencies]
export = [
    "pyarrow>=16.0.0",
]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "ruff==0.15.6",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
exclude = [
    ".venv",
    "build",
    "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = ["-q", "-m", "not slow", "--ignore=tests/extended"]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
norecursedirs = ["extended"]
markers = [
    "slow: full LangGraph invoke, HTTP TestClient, or heavy multi-step backtest (opt-in)",
    "agentic: full graph with Tier-0 Nexus fixtures (runs in default CI suite)",
]
